# MinecraftGL

./: CMakeLists.txt  README.md
include/: iomanager.h  logger.h  main.h  mesh.h  opengl.h  shader.h  window.h
src/: iomanager.c  logger.c  main.c  mesh.c  opengl.c  shader.c  window.c
